SERVER-57754 Tenant Oplog Applier doesn't grab the RSTL before reserving oplog slots