src/mongo/db/repl/tenant_oplog_applier.cpp
@@ -415,6 +415,10 @@ TenantOplogApplier::OpTimePair TenantOplogApplier::_writeNoOpEntries(
     // the RSTL.
     opCtx->setAlwaysInterruptAtStepDownOrUp();
 
+    // Prevent the node from being able to change state when reserving oplog slots and writing
+    // entries.
+    AutoGetOplog oplogWrite(opCtx, OplogAccessMode::kWrite);
+
     // We start WriteUnitOfWork only to reserve oplog slots. So, it's ok to abort the
     // WriteUnitOfWork when it goes out of scope.
     WriteUnitOfWork wuow(opCtx);
